--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,33 +1,36 @@
+# ~/.tmux.conf
+
+# Tmux Settings
+set-window-option -g status-position top
+set -g mouse on
+set -g default-terminal "tmux-256color"
+
+# Configure the catppuccin plugin
+set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+set -g @catppuccin_window_status_style "basic"
+set -g @catppuccin_status_background "none"
+
+set -ogq @catppuccin_pane_left_separator "█"
+set -ogq @catppuccin_pane_middle_separator "█"
+set -ogq @catppuccin_pane_right_separator "█"
+
+# Status line options
+set -g @catppuccin_status_left_separator "█"
+set -g @catppuccin_status_right_separator "█"
+
+# Load catppuccin
+run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+
+set -g status-right-length 100
+set -g status-left-length 100
+set -g status-left ""
+
+set -g status-right "#{E:@catppuccin_status_application}"
+set -ag status-right "#{E:@catppuccin_status_session}"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'catppuccin/tmux#v2.1.2' # See https://github.com/catppuccin/tmux/tags for additional tags
 
-# Options to make tmux more pleasant
-set -g mouse on
-set -g default-terminal "tmux-256color"
-
-# Tmux configuration
-set -g status-position top
-
-# Run plugin
-run ~/.config/tmux/plugins/tmux/catppuccin.tmux
-
-set -g @catppuccin_window_status_style "basic"
-
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
-set -g @catppuccin_status_background "none"
-set -g @catppuccin_pane_status_enabled "off"
-set -g @catppuccin_pane_border_status "off"
-
-set -g status-right-length 100
-set -g status-left-length 100
-
-set -g status-left ""
-set -gF status-right '#{@catppuccin_status_directory}'
-set -agF status-right '#{E:@catppuccin_status_session}'
-set -agF status-right '#{E:@catppuccin_status_date_time}'
-
-# Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
 run '~/.tmux/plugins/tpm/tpm'
