Update tmux config

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -6,7 +6,7 @@ set -g mouse on
 set -g default-terminal "tmux-256color"
 
 # Configure the catppuccin plugin
-set -g @catppuccin_flavor 'mocha' # latte, frappe, macchiato or mocha
+set -g @catppuccin_flavor 'machiato' # latte, frappe, macchiato or mocha
 set -g @catppuccin_window_status_style "basic"
 set -g @catppuccin_status_background "none"
 
