--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -1,36 +1,51 @@
 # ~/.tmux.conf
 
 # Tmux Settings
-set-window-option -g status-position top
 set -g mouse on
-set -g default-terminal "tmux-256color"
+set -g default-terminal "xterm-256color"
+set-option -ga terminal-overrides ",xterm-256color:Tc"
 
-# Configure the catppuccin plugin
-set -g @catppuccin_flavor 'machiato' # latte, frappe, macchiato or mocha
-set -g @catppuccin_window_status_style "basic"
-set -g @catppuccin_status_background "none"
+# don't do anything when a 'bell' rings
+set -g visual-activity off
+set -g visual-bell off
+set -g visual-silence off
+setw -g monitor-activity off
+set -g bell-action none
 
-set -ogq @catppuccin_pane_left_separator "█"
-set -ogq @catppuccin_pane_middle_separator "█"
-set -ogq @catppuccin_pane_right_separator "█"
+# clock mode
+setw -g clock-mode-colour yellow
 
-# Status line options
-set -g @catppuccin_status_left_separator "█"
-set -g @catppuccin_status_right_separator "█"
+# copy mode
+setw -g mode-style 'fg=black bg=red bold'
 
-# Load catppuccin
-run '~/.config/tmux/plugins/tmux/catppuccin.tmux'
+# panes
+set -g pane-active-border-style 'fg=#8bd5ca'
 
-set -g status-right-length 100
-set -g status-left-length 100
-set -g status-left ""
+# statusbar
+set -g status-position top
+set -g status-justify left
+set-option -g status "on"
 
-set -g status-right "#{E:@catppuccin_status_application}"
-set -ag status-right "#{E:@catppuccin_status_session}"
+set -g status-left ''
+set -g status-left-length 10
+
+set -g status-right-style 'bold'
+set -g status-right '#[fg=#eed49f, bg=#24273a] #[fg=#24273a, bg=#eed49f] #{pane_current_path}#[fg=#a6e3a1, bg=#eed49f] #[fg=#24273a, bg=#a6e3a1] %d.%m.%Y %H:%M '
+set -g status-right-length 50
+
+setw -g window-status-current-style 'bold'
+setw -g window-status-current-format '#[fg=#24273a, bg=#c6a0f6] #I #W #F #[fg=#c6a0f6, bg=#24273a]'
+
+setw -g window-status-style ''
+setw -g window-status-format '#[fg=#24273a, bg=#eed49f] #I #W #F #[fg=#eed49f, bg=#24273a]'
+
+setw -g window-status-bell-style 'fg=yellow bg=red bold'
+
+# messages
+set -g message-style 'fg=#494d64 bg=#8bd5ca bold'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
-set -g @plugin 'catppuccin/tmux#v2.1.2' # See https://github.com/catppuccin/tmux/tags for additional tags
 
 run '~/.tmux/plugins/tpm/tpm'
