Update tmux config

--- a/config/tmux/.tmux.conf
+++ b/config/tmux/.tmux.conf
@@ -24,6 +24,7 @@ set -g pane-active-border-style 'fg=#8bd5ca'
 # statusbar
 set -g status-position top
 set -g status-justify left
+set -g status-style 'bg=#24273a,fg=#cad3f5'
 set-option -g status "on"
 
 set -g status-left ''
@@ -42,7 +43,7 @@ setw -g window-status-format '#[fg=#24273a, bg=#eed49f] #I #W #F #[fg=#eed49f, b
 setw -g window-status-bell-style 'fg=yellow bg=red bold'
 
 # messages
-set -g message-style 'fg=#494d64 bg=#8bd5ca bold'
+set -g message-style 'fg=#24273a bg=#8bd5ca bold'
 
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
